src/PresentationalComponents/RuleDetails/_RuleDetails.scss
hr {
  border: 0.01rem solid #ccc;
  margin: var(--pf-global--spacer--md) 0 var(--pf-global--spacer--md) 0;
}

.description-stack-override {
  width: 452px;
  .severity-line {
    .ins-l-title {
      width: 150px;
      span {
        font-size: var(--pf-global-FontSize--md);
      }
    }
  }
}

.system-reboot-message {
  display: inline-flex;

  .system-reboot-message__content {
    position: relative;
  }

  .reboot-required-icon {
    margin-top: 5px;
    margin-right: var(--pf-global--spacer--sm);
    color: var(--pf-global--palette--red-100);
  }

  .no-reboot-required-icon {
    margin-top: 5px;
    margin-right: var(--pf-global--spacer--sm);
    color: var(--pf-global--palette--black-400);
  }
}

.topicsCard {
  background-color: var(--pf-global--BackgroundColor--150);
  box-shadow: none;
  word-break: break-word;
}

.alignCenterOverride {
  align-items: center;
  width: 100%;
}

.genericOverride {
  p {
    margin-top: 0;
    margin-bottom: var(--pf-global--spacer--md);
  }
}

